remove deprecated use of "URL"
standardize constructors using catalogServiceURI