@@ -6,7 +6,7 @@ import static org.junit.Assert.assertTrue;
 import java.io.File;
 import java.io.InputStream;
 import java.io.StringWriter;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
 
@@ -17,7 +17,7 @@ public class IOUtilsTest {
     @Test
     public final void testGetStream() throws Exception {
         File self = new File("src/test/java/edu/stanford/irt/eresources/IOUtilsTest.java");
-        InputStream is = IOUtils.getStream(new URL("file://" + self.getAbsolutePath()));
+        InputStream is = IOUtils.getStream(new URI("file://" + self.getAbsolutePath()).toURL());
         StringWriter writer = new StringWriter();
         org.apache.commons.io.IOUtils.copy(is, writer, StandardCharsets.UTF_8);
         assertTrue(writer.toString().contains("IOUtilsTest"));
@@ -28,6 +28,6 @@ public class IOUtilsTest {
         List<File> files = IOUtils.getUpdatedFiles(new File("src/main/resources"), ".xml", 0);
         assertTrue(files.size() >= 10);
         files = IOUtils.getUpdatedFiles(new File("src/main/resources"), ".xml", Long.MAX_VALUE);
-        assertEquals(0,files.size());
+        assertEquals(0, files.size());
     }
 }
